syntax = "proto3";

package auth;

option go_package = "aycom/backend/proto/auth";

service AuthService {

  rpc Login(LoginRequest) returns (TokenResponse) {}

  rpc Register(RegisterRequest) returns (TokenResponse) {}

  rpc ValidateToken(ValidateRequest) returns (ValidateResponse) {}

  rpc RefreshToken(RefreshRequest) returns (TokenResponse) {}

  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string user_id = 2;
  map<string, string> claims = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
  string token_type = 4; 
  int64 expires_in = 5;  
}

message LogoutRequest {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}